# GravityBoost

./: .gitignore  .gitmodules  CMakeLists.txt  Claude.MD  README.md  build.sh  compile_commands.json  imgui.ini  scratch_ideas.c  shell.html
.cache/clangd/index/: SDL.c.169A562FC7F1ED5D.idx  SDL.h.7268B6F50C0982B7.idx  SDL_RLEaccel.c.6BCD49C4B02A7628.idx  SDL_RLEaccel_c.h.99DCB1AC8D10EF38.idx  SDL_alsa_audio.c.356DCBBEEA98481C.idx  SDL_alsa_audio.h.6094D0585389D755.idx  SDL_appid.c.4BC06CD9E079F371.idx  SDL_appid.h.B10F0FEB78BEFF5A.idx  SDL_assert.c.3DF601CB14C8B630.idx  SDL_assert.h.473EF3B89C54175E.idx  SDL_assert_c.h.C1491BF37F081749.idx  SDL_asyncio.c.CB7461E55E692D48.idx  SDL_asyncio.h.6DEE3A104CB8CA37.idx  SDL_asyncio_c.h.DFE7850908B6260B.idx  SDL_asyncio_generic.c.F160561C5EAAAF2D.idx  SDL_asyncio_liburing.c.9656B7032FF46D2C.idx  SDL_atomic.c.C89C8F6C31B1D8CC.idx  SDL_atomic.h.BD8B2CC70B7BE30C.idx  SDL_audio.c.3B58FE91E0C639FB.idx  SDL_audio.h.8C492D5DA8E2FD55.idx  SDL_audio_c.h.8BC0EAC20A5DC12F.idx  SDL_audiodev.c.68BC975D17F02C8A.idx  SDL_audioqueue.c.95274F769C29445E.idx  SDL_audioqueue.h.B3A968FB5D7D3DB7.idx  SDL_audioresample.c.71102AE3580494F6.idx  SDL_audioresample.h.DF12914F2A763271.idx  SDL_audiotypecvt.c.B25F821AB297E27F.idx  SDL_begin_code.h.8DA9C9D3D7C4304A.idx  SDL_bits.h.F6F0EC58F69A3403.idx  SDL_blendfillrect.c.ACDD8C79150DDA6D.idx  SDL_blendfillrect.h.5859EA8696B75A13.idx  SDL_blendline.c.32221BCCD6957E8B.idx  SDL_blendline.h.FD407CE7A42ED0A8.idx  SDL_blendmode.h.B229A766F1FFFF6D.idx  SDL_blendpoint.c.7F18D22EEE093238.idx  SDL_blendpoint.h.F4A9A7B655C64738.idx  SDL_blit.h.2832E75C67429948.idx  SDL_blit_0.c.4FFAAB2EA75FA818.idx  SDL_blit_1.c.C2A4DD844887FB51.idx  SDL_blit_A.c.F77490327B6921E6.idx  (+636 more)
assets/levels/: gauntlet_02.json  quad_03.json  slingshot_01.json
src/: compile_commands.json  main.c
src/app/: app.c  app.h
src/data/: fs.c  fs.h  json.c  json.h
src/editor/: editor_interact.c  editor_interact.h  editor_main.c  editor_save.c  editor_save.h  editor_state.c  editor_state.h  editor_ui.c  editor_ui.h
src/game/: game.c  game.h
src/physics/: phys_gravity.c  phys_gravity.h  physics.c  physics.h
src/render/: planet_gen.c  planet_gen.h  render.c  render.h  render_background.c  render_background.h  render_bounds.c  render_bounds.h  render_field.c  render_field.h  render_planets.c  render_planets.h  render_ship.c  render_ship.h  render_ui.c  render_ui.h
